--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EiTruck">
         <activity
-            android:name=".ui.SplashScreen"
+            android:name=".MainActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.SplashScreen"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
