--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EiTruck">
+        <activity
+            android:name=".ChatBot"
+            android:exported="false"
+            android:theme="@style/Theme.EiTruck" />
         <activity
             android:name=".SplashAITruck"
             android:exported="false" />
@@ -37,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".ui.login.Login"
             android:exported="false" />
