--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EiTruck">
         <activity
-            android:name=".ChatBot"
+            android:name=".ui.chat_bot.ChatBot"
             android:exported="false"
-            android:theme="@style/Theme.EiTruck" />
+            android:theme="@style/Theme.EiTruck"
+            android:windowSoftInputMode="adjustResize"            />
         <activity
             android:name=".SplashAITruck"
             android:exported="false" />
