--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -16,15 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EiTruck">
         <activity
+            android:name=".ui.notification.Notifications"
+            android:exported="false" />
+        <activity
             android:name=".ui.chat_bot.ChatBot"
             android:exported="false"
             android:theme="@style/Theme.EiTruck"
-            android:windowSoftInputMode="adjustResize"            />
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".SplashAITruck"
+            android:name=".ui.SplashAITruck"
             android:exported="false" />
         <activity
-            android:name=".Main"
+            android:name=".ui.Main"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
