--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EiTruck">
-
+        <activity
+            android:name=".NoConnection"
+            android:exported="false" />
         <activity
             android:name=".ui.notification.Notifications"
             android:exported="false" />
@@ -37,7 +39,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.main.Main"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ui.forgot_password.ForgotpassChange"
             android:exported="false" />
@@ -50,13 +52,15 @@
         <activity
             android:name=".ui.profile.Profile"
             android:exported="false" />
-        <activity android:name=".ui.settings.Settings"
+        <activity
+            android:name=".ui.settings.Settings"
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
