--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,13 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.EiTruck">
-
+        <activity
+            android:name=".RestrictArea"
+            android:exported="false" />
         <activity
             android:name=".ui.notification.Notifications"
             android:exported="false" />
@@ -38,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.main.Main"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ui.forgot_password.ForgotpassChange"
             android:exported="false" />
@@ -51,13 +53,15 @@
         <activity
             android:name=".ui.profile.Profile"
             android:exported="false" />
-        <activity android:name=".ui.settings.Settings"
+        <activity
+            android:name=".ui.settings.Settings"
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -74,6 +78,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
     </application>
+
 </manifest>
