--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,43 +26,56 @@
         android:theme="@style/Theme.EiTruck">
         <activity
             android:name=".NoConnection"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.restrict.RestrictArea"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.notification.Notifications"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.chat_bot.ChatBot"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.EiTruck"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.SplashAITruck"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.main.Main"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.forgot_password.ForgotpassChange"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.forgot_password.ForgotpassCode"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.forgot_password.ForgotpassInput"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.profile.Profile"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.settings.Settings"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity android:name=".ui.tratativa.TratativaNote"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
